# test_docker

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
djangoProject/: settings.py  urls.py
